syntax = "proto3";

package build.stack.nucleate.v1beta;

// Username is implied in the auth headers
message CreateSubscriptionRequest {
  // The stripe payment source token that was generated in the frontend
  string token_id = 1;

  // the plan that the user is subscribing to
  string plan_id = 2;
}

// Username is implied in the auth headers
message CancelSubscriptionRequest {
  // the id the sub to cancel
  string id = 2;
}

message CancelSubscriptionResponse { Subscription subscription = 1; }

message Subscription {
  string customer_id = 1;
  string plan_id = 2;
  string id = 3;
  string name = 4;
  string status = 5;
  string schedule = 6;
  int32 quantity = 7;
  int64 start_date = 8;
  int64 trial_start = 9;
  int64 trial_end = 10;
  int64 created = 11;
  int64 current_period_start = 12;
  int64 current_period_end = 13;

  int64 plan_amount = 14;

}

message Plan {
  string id = 1;
  string name = 2;
  int64 amount = 3;
  string currency = 4;
  string interval = 5;
  string description = 6;
  int32 trial_period_days = 7;
  string primary_feature = 8;
}

message ListPlansRequest {}

message ListPlansResponse { repeated Plan plan = 1; }

// Username is implied in the auth headers
message GetCustomerRequest {
  reserved 1;
  string email_address = 2;
}

message Customer {
  string id = 1;
  string email = 2;
  repeated Subscription subscription = 3;
}

service Customers {
  rpc Get(GetCustomerRequest) returns (Customer) {}
}

service Plans {
  rpc List(ListPlansRequest) returns (ListPlansResponse) {}
}

service Subscriptions {
  rpc CreateSubscription(CreateSubscriptionRequest) returns (Subscription) {}
  rpc CancelSubscription(CancelSubscriptionRequest)
      returns (CancelSubscriptionResponse) {}
}
